--- a/quickmart_ecommerce/package.json
+++ b/quickmart_ecommerce/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
