--- a/quickmart_ecommerce/package.json
+++ b/quickmart_ecommerce/package.json
@@ -24,6 +24,7 @@
     "react-loader-spinner": "^8.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
