--- a/quickmart_ecommerce/package.json
+++ b/quickmart_ecommerce/package.json
@@ -15,6 +15,8 @@
     "@headlessui/react": "^2.2.9",
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.10.1",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.0",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "react": "^19.2.0",
