--- a/quickmart_ecommerce/package.json
+++ b/quickmart_ecommerce/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.9",
     "@mui/material": "^7.3.5",
+    "@mui/x-data-grid": "^8.24.0",
     "@reduxjs/toolkit": "^2.10.1",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.0",
